Add db retention support (#2486)
* Add db migration to add cascade deletion on `fk`s

Signed-off-by: wslulciuc <willy@datakin.com>

* Add `DbDataRetention` and `dataRetentionInDays` config

Signed-off-by: wslulciuc <willy@datakin.com>

* Add `DbRetentionJob`

Signed-off-by: wslulciuc <willy@datakin.com>

* Add `DbRetentionCommand`

Signed-off-by: wslulciuc <willy@datakin.com>

* Add `frequencyMins` config for runs and rename `dbRetentionInDays`

Signed-off-by: wslulciuc <willy@datakin.com>

* Add docs to `DbRetentionJob` and minor renaming

Signed-off-by: wslulciuc <willy@datakin.com>

* Wrap `DbRetention.retentionOnDbOrError()` in `try/catch`

Signed-off-by: wslulciuc <willy@datakin.com>

* Add docs to DbRetention

Signed-off-by: wslulciuc <willy@datakin.com>

* continued: Add docs to `DbRetention`

Signed-off-by: wslulciuc <willy@datakin.com>

* Add handling of `errorOnDbRetention`

Signed-off-by: wslulciuc <willy@datakin.com>

* Add docs to `DbException` and `DbRetentionException`

Signed-off-by: wslulciuc <willy@datakin.com>

* `info` -> `debug` when inserting column lineage

Signed-off-by: wslulciuc <willy@datakin.com>

* Remove `dbRetention.enabled`

Signed-off-by: wslulciuc <willy@datakin.com>

* Update handling of `StatementException`

Signed-off-by: wslulciuc <willy@datakin.com>

* Minor changes

Signed-off-by: wslulciuc <willy@datakin.com>

* Add `docs/faq.md`

Signed-off-by: wslulciuc <willy@datakin.com>

* continued: `Add docs/faq.md`

Signed-off-by: wslulciuc <willy@datakin.com>

* continued: Add `docs/faq.md`

Signed-off-by: wslulciuc <willy@datakin.com>

* continued: Add `docs/faq.md`

Signed-off-by: wslulciuc <willy@datakin.com>

* Define `DEFAULT_RETENTION_DAYS` constant in `DbRetention`

Signed-off-by: wslulciuc <willy@datakin.com>

* Make chunk size in retention query configurable

Signed-off-by: wslulciuc <willy@datakin.com>

* Remove `DATA_RETENTION_IN_DAYS` from

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -53,6 +53,7 @@ dependencies {
 
     testImplementation "io.dropwizard:dropwizard-testing:${dropwizardVersion}"
     testImplementation "org.jdbi:jdbi3-testing:${jdbi3Version}"
+    testImplementation "org.jdbi:jdbi3-testcontainers:${jdbi3Version}"
     testImplementation "org.junit.vintage:junit-vintage-engine:${junit5Version}"
     testImplementation "org.testcontainers:postgresql:${testcontainersVersion}"
     testImplementation "org.testcontainers:junit-jupiter:${testcontainersVersion}"
