--- a/clients/java/build.gradle
+++ b/clients/java/build.gradle
@@ -83,7 +83,9 @@ publishing {
 
     repositories {
         maven {
-            url = 'https://oss.sonatype.org/service/local/staging/deploy/maven2'
+            def releasesRepoUrl = 'https://oss.sonatype.org/service/local/staging/deploy/maven2/'
+            def snapshotsRepoUrl = 'https://oss.sonatype.org/content/repositories/snapshots/'
+            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
             credentials {
                 username = System.getenv('SONATYPE_NEXUS_USERNAME')
                 password = System.getenv('SONATYPE_NEXUS_PASSWORD')
