--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ buildscript {
         classpath 'com.adarshr:gradle-test-logger-plugin:3.2.0'
         classpath 'gradle.plugin.com.github.johnrengelman:shadow:7.1.2'
         classpath 'com.diffplug.spotless:spotless-plugin-gradle:6.20.0'
+        classpath "io.freefair.gradle:lombok-plugin:8.4"
     }
 }
 
@@ -39,6 +40,7 @@ subprojects {
     apply plugin: 'com.github.johnrengelman.shadow'
     apply plugin: "com.diffplug.spotless"
     apply plugin: "pmd"
+    apply plugin: "io.freefair.lombok"
 
     project(':api') {
         apply plugin: 'application'
@@ -95,7 +97,11 @@ subprojects {
         archiveClassifier.set("sources")
     }
 
-    task javadocJar(type: Jar, dependsOn: javadoc) {
+    task delombokJavadocs(type: Javadoc) {
+        source = delombok
+    }
+
+    task javadocJar(type: Jar, dependsOn: delombokJavadocs) {
         from javadoc.destinationDir
         archiveClassifier.set("javadoc")
     }
