Fixes headers in docs/v2/netlify.toml. (#2648)
Signed-off-by: Michael Robinson <merobi@gmail.com>

--- a/docs/v2/netlify.toml
+++ b/docs/v2/netlify.toml
@@ -2,5 +2,5 @@
   for = "/*"
   [headers.values]
     X-Frame-Options = "DENY"
-    Content-Security-Policy = "frame-ancestors https://fonts.googleapis.com"
+    Content-Security-Policy = "frame-ancestors none; link https://fonts.googleapis.com"
     X-Content-Type-Options = "nosniff"
