--- a/web/package.json
+++ b/web/package.json
@@ -40,6 +40,7 @@
     "@visx/shape": "3.0.0",
     "@visx/zoom": "3.1.1",
     "autoprefixer": "^10.4.14",
+    "copy-webpack-plugin": "^10.2.4",
     "css-loader": "^6.7.4",
     "d3": "^7.8.4",
     "d3-axis": "^3.0.0",
@@ -98,6 +99,7 @@
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
     "clean-webpack-plugin": "^4.0.0",
+    "elkjs": "^0.8.2",
     "es6-promise": "^4.2.8",
     "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.8.0",
@@ -105,6 +107,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
     "file-loader": "^6.2.0",
+    "graph": "file:./libs/graph",
     "html-webpack-plugin": "^5.5.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.5.0",
