--- a/web/package.json
+++ b/web/package.json
@@ -30,6 +30,7 @@
     "@types/jest": "^29.5.2",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-syntax-highlighter": "^15.5.6",
+    "@uiw/react-json-view": "^2.0.0-alpha.11",
     "@visx/clip-path": "3.0.0",
     "@visx/gradient": "3.0.0",
     "@visx/grid": "3.0.1",
@@ -63,7 +64,6 @@
     "react-helmet-async": "^1.3.0",
     "react-i18next": "^12.3.1",
     "react-inlinesvg": "^3.0.2",
-    "react-json-tree": "^0.18.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
